fix: #682 - fix dark mode for phone dropdown (#289)

--- a/app/assets/stylesheets/folio/input/_phone.sass
+++ b/app/assets/stylesheets/folio/input/_phone.sass
@@ -1,6 +1,11 @@
 .iti
   --iti-path-flags-1x: url('https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/23.5.0/img/flags.png')
   --iti-path-flags-2x: url('https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/23.5.0/img/flags@2x.png')
+  --iti-dropdown-bg: #{$shade-light-contrast}
+  --iti-hover-color: #{$shade-100}
+
+  &__search-input
+    background: var(--iti-dropdown-bg)
 
 .f-input-form-group--phone
   .iti
